# vit_udip

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api_reference.md  architecture.md
examples/: inference_example.py  train_example.py
vit_udip/: __init__.py
vit_udip/data/: __init__.py  dataset.py
vit_udip/models/: __init__.py  udip_engine.py  vit_decoder.py  vit_encoder.py
vit_udip/training/: __init__.py  trainer.py
vit_udip/utils/: __init__.py  attention.py  feature_extraction.py  patch_embedding.py  positional_encoding.py  reconstruction.py
